--- a/estilo.css
+++ b/estilo.css
@@ -29,7 +29,7 @@ html{
 .contenedor-header header .logo a{
     font-family: 'Righteous';
     font-size: 36px;
-    color: #d31515;
+    color: #ed1111;
     text-decoration: none;
 }
 .contenedor-header header ul{
@@ -45,10 +45,10 @@ html{
     text-decoration: none;
 }
 .contenedor-header header nav ul li a:hover{
-    color: #d31515;
+    color: #ed1111;
 }
 .nav-responsive{
-    background-color: #d31515;
+    background-color: #ed1111;
     color:#fff;
     padding: 5px 10px;
     border-radius: 5px;
@@ -75,7 +75,7 @@ html{
 }
 .inicio .contenido-banner img{
     margin-top: 40px;
-    border: 10px solid #d31515;
+    border: 10px solid #ed1111;
     display: block;
     width: 80%;
     margin: auto;
@@ -104,7 +104,7 @@ html{
     transition: .3s;
 }
 .inicio .contenido-banner .redes a:hover{
-    background-color: #d31515;
+    background-color: #ed1111;
 }
 .sobremi{
     background-color: #1e2326;
@@ -128,7 +128,7 @@ html{
     margin-bottom: 20px;
 }
 .sobremi .contenido-seccion p span{
-    color: #d31515;
+    color: #ed1111;
     font-weight: bold;
 }
 .sobremi .fila{
@@ -151,11 +151,11 @@ html{
 }
 .sobremi .fila .col ul li strong{
     display: inline-block;
-    color: #d31515;
+    color: #ed1111;
     width: 130px;
 }
 .sobremi .fila .col ul li span{
-    background-color: #d31515;
+    background-color: #ed1111;
     padding: 3px;
     font-weight: bold;
     border-radius: 5px;
@@ -176,7 +176,7 @@ html{
     justify-content: center;
     transition: .3s;
 }.sobremi .fila .col .contenedor-intereses .interes:hover{
-    background-color: #d31515;
+    background-color: #ed1111;
 }
 .sobremi .fila .col .contenedor-intereses .interes i{
     font-size: 30px;
@@ -201,7 +201,7 @@ html{
     left: 0;
     width: 0;
     height: 100%;
-    background-color: #d31515;
+    background-color: #ed1111;
     z-index: -1;
     transition: 1s;
 }
@@ -250,7 +250,7 @@ html{
     margin-bottom: 30px;
 }
 .skills .skill .progreso{
-    background-color: #d31515;
+    background-color: #ed1111;
     position: absolute;
     top: 0;
     left: 0;
@@ -260,7 +260,7 @@ html{
     position: absolute;
     height: 40px;
     width: 40px;
-    background-color: #d31515;
+    background-color: #ed1111;
     border-radius: 50px;
     line-height: 40px;
     text-align: center;
@@ -405,30 +405,30 @@ html{
     margin-bottom: 10px;
 }
 .curriculum .fila .item .casa{
-    color: #d31515;
+    color: #ed1111;
     font-size: 22px;
     font-weight: bold;
     display: block;
 }
 .curriculum .fila .item .fecha{
     display: block;
-    color: #d31515;
+    color: #ed1111;
     margin-bottom: 10px;
 }
 .curriculum .fila .item p{
     line-height: 24px;
 }
 .curriculum .fila .izq{
-    border-right: 2px solid #d31515;
+    border-right: 2px solid #ed1111;
     margin-right: 20px;
 }
 .curriculum .fila .der{
-    border-left: 2px solid #d31515;
+    border-left: 2px solid #ed1111;
     margin-left: 20px;
 }
 .curriculum .fila .item .conectori{
     height: 2px;
-    background-color: #d31515;
+    background-color: #ed1111;
     width: 47px;
     position: absolute;
     top: 50%;
@@ -440,14 +440,14 @@ html{
     height: 10px;
     width: 10px;
     border-radius: 50%;
-    background-color: #d31515;
+    background-color: #ed1111;
     float: right;
     position: relative;
     bottom: 4px;
 }
 .curriculum .fila .item .conectord{
     height: 2px;
-    background-color: #d31515;
+    background-color: #ed1111;
     width: 47px;
     position: absolute;
     top: 50%;
@@ -459,7 +459,7 @@ html{
     height: 10px;
     width: 10px;
     border-radius: 50%;
-    background-color: #d31515;
+    background-color: #ed1111;
     float: left;
     position: relative;
     bottom: 4px;
@@ -502,7 +502,7 @@ html{
     width: 100%;
     height: 100%;
     text-align: center;
-    background: linear-gradient(rgba(203, 13, 13, 0.8), rgba(203, 13, 13, 0.8));
+    background: linear-gradient(rgba(228, 12, 12, 0.8), rgba(228, 12, 12, 0.8));
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -575,7 +575,7 @@ html{
     left: 0;
     width: 0;
     height: 100%;
-    background-color: #d31515;
+    background-color: #ed1111;
     z-index: -1;
     transition: 1s;
 }
@@ -583,7 +583,7 @@ html{
     width: 100%;
 }
 .contacto .col img{
-    width: 100%;
+    width: 118%;
 }
 .contacto .col .info{
     position: absolute;
@@ -601,7 +601,7 @@ html{
     margin-bottom: 20px;
 }
 .contacto .col .info ul li i{
-    color: #d31515;
+    color: #ed1111;
     display: inline-block;
     margin-right: 20px;
 }
@@ -633,7 +633,7 @@ footer .arriba{
     display: block;
     width: 50px;
     height: 50px;
-    background-color: #d31515;
+    background-color: #ed1111;
     color: #fff;
     position: absolute;
     left: 50%;
